GNOME Bugzilla – Bug 749850
network/net-device-ethernet: Re-work how we keep track of connections
Last modified: 2015-07-15 13:51:26 UTC
When we're finalizing, the remote settings instance might already be gone and thus we can't list connections. In particular this happens at panel finalization resulting in the following warning: libnm-glib-CRITICAL **: nm_remote_settings_list_connections: assertion 'NM_IS_REMOTE_SETTINGS (settings)' failed because cc_network_panel_dispose() unrefs the remote settings object before all the NetDevice instances are finalized. Since we only need to list connections on finalize to disconnect a signal we can instead use g_signal_connect_object() and keep the connections that we're keeping track of in a hash table instead of g_object_set_data().
Created attachment 303939 [details] [review] network/net-device-ethernet: Re-work how we keep track of connections
Review of attachment 303939 [details] [review]: Looks good. Please cherry-pick as well.
Attachment 303939 [details] pushed as c8986f6 - network/net-device-ethernet: Re-work how we keep track of connections